# Feynman-Loop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Claude.md  Context.md  LESSONS.md  Learnings.md  Principles.md  README.md  feynman_state.json  pyproject.toml  requirements.txt
.claude/: verify.sh
.github/workflows/: ci.yml
feynman_loop/: app_cli.py  cli.py  db.py  due.py  installer.py  learner.py  loop.py  mcp_server.py  paths.py  providers.py  relations.py  render.py  scheduling.py  settings.py  sources.py  storage.py  vault.py  verification.py
feynman_loop/assets/hooks/: capture.py  stop_nudge.py
feynman_loop/judge/: __init__.py  base.py  claude_judge.py
feynman_loop/models/: __init__.py  concept.py  gap_report.py  relevance.py  transfer.py  user_state.py
feynman_loop/retrieval/: __init__.py  base.py  chroma_store.py  chunking.py  query_expansion.py
feynman_loop/transfer/: __init__.py  base.py  claude_transfer.py
feynman_loop/web/: app.py
feynman_loop/web/static/: index.html
hooks/: capture.py  stop_nudge.py
mcpb/: main.py  manifest.json
scripts/: build_mcpb.sh
tests/: test_app_cli.py  test_chroma_store.py  test_chunking.py  test_claude_judge.py  test_cli.py  test_consolidation.py  test_db.py  test_due.py  test_hooks.py  test_installer.py  test_learner.py  test_loop.py  test_mcp.py  test_query_expansion.py  test_scheduling.py  test_settings.py  test_sources.py  test_transfer.py  test_vault.py  test_verification.py  test_web.py
